--- a/main.tex
+++ b/main.tex
@@ -156,7 +156,7 @@ The authors are grateful to Prof Veikko Jousmaki for providing the light-to-volt
 
 
 \section*{Significance Statement}
-We aimed to investigate to what extent ongoing, high frequency oscillations in the gamma band (30-100 Hz) in the human brain can be entrained by a visual flicker. Gamma oscillations have long been suggested to coordinate neuronal firing and enable inter-regional communication. Our results demonstrate that flicker responses cannot hijack the dynamics of ongoing gamma oscillations; rather, the flicker response and the endogenous gamma oscillations coexist in different visual areas. Therefore, while a visual flicker evokes a strong neuronal response even at high frequencies in the gamma-band, it does not entrain endogenous gamma oscillations in visual cortex. This has important implications for interpreting studies investigating the causal and neuroprotective effects of rhythmic sensory stimulation in the gamma band.
+We aimed to investigate to what extent ongoing, high frequency oscillations in the gamma band (30-100 Hz) in the human brain can be entrained by a visual flicker. Gamma oscillations have long been suggested to coordinate neuronal firing and enable inter-regional communication. Our results demonstrate that rhythmic visual stimulation cannot hijack the dynamics of ongoing gamma oscillations; rather, the flicker response and the endogenous gamma oscillations coexist in different visual areas. Therefore, while a visual flicker evokes a strong neuronal response even at high frequencies in the gamma-band, it does not entrain endogenous gamma oscillations in visual cortex. This has important implications for interpreting studies investigating the causal and neuroprotective effects of rhythmic sensory stimulation in the gamma band.
 
 %\newpage
 
