--- a/sections/2_intro_new.tex
+++ b/sections/2_intro_new.tex
@@ -7,13 +7,13 @@
 \begin{document}
 Cortical gamma oscillations have been repeatedly linked to the formation of neuronal ensembles through synchronisation of spiking activity in rodents and primates \citep[e.g.][]{eckhorn1988coherent,gray1989stimulus,engel1991interhemispheric,wehr1996odour,brosch2002stimulus}, including humans \citep[e.g.][]{tallon1995gamma,muller1997visually,rodriguez1999perception,hoogenboom2006localizing}. Accordingly, they have been ascribed a supporting role for neuronal computations within populations \citep[][]{singer1995visual,singer1999neuronal,von1999and,engel2001dynamic,singer2009distributed,nikolic2013gamma} as well as  inter-regional functional connectivity \citep{bressler1990gamma,varela2001brainweb,fries2007gamma}. Indeed, numerous studies have been able to link gamma oscillations in the human brain to cognitive processes and perception \citep[see][for review]{bacsar1996gamma,herrmann2001gamma,jensen2007human,tallon2009roles,uhlhaas2009neural}, whereas anomalous gamma-band activity has been associated with impaired cognition and awareness, as in e.g. autism spectrum disorder, schizophrenia and Alzheimer's dementia \citep[see][for review]{herrmann2005human,uhlhaas2006neural,uhlhaas2009neural,traub2010cortical,grutzner2013deficits}.
 
-In this study, we aimed to entrain, i.e. synchronise, gamma oscillations in the human visual cortex to a rhythmic photic drive at frequencies $>$50 Hz. Stimulation at such high frequencies has recently been applied in Rapid Frequency Tagging (RFT) protocols, to investigate spatial attention \citep{zhigalov2019probing} and audiovisual integration in speech \citep{drijvers2020rapid}, with minimal visibility of the flicker. The ability to non-invasively modulate gamma rhythms would allow to study their causal role in neuronal processing and cognition, as well as their therapeutic potential, as recently proposed by \citep{iaccarino2016gamma,adaikkan2019gamma2}.
+In this study, we aimed to entrain, i.e. synchronise, gamma oscillations in the human visual cortex to a rhythmic photic drive at frequencies above 50 Hz. Stimulation at such high frequencies has recently been applied in Rapid Frequency Tagging (RFT) protocols, to investigate spatial attention \citep{zhigalov2019probing} and audiovisual integration in speech \citep{drijvers2020rapid}, with minimal visibility of the flicker. The ability to non-invasively modulate gamma rhythms would allow to study their causal role in neuronal processing and cognition, as well as their therapeutic potential, as recently proposed by \citep{iaccarino2016gamma,adaikkan2019gamma2}.
 
 It is widely accepted that rhythmic inhibition imposed by inhibitory interneurons forms the backbone of neuronal gamma oscillations \citep[][see \citealt{bartos2007synaptic,buzsaki2012mechanisms} for review]{traub1996mechanism,lozano2014gabaergic}. Indeed, \citet{cardin2009driving} demonstrate evidence for resonance, i.e. a targeted amplification, in the gamma band, in response to optogenetic  stimulation of GABAergic interneurons, but not when driving excitatory pyramidal cells \citep[also see][]{tiesinga2012motifs}. Here, we ask if a rapid photic flicker can hijack human visual gamma oscillations; a positive outcome would suggest that visual stimulation can modulate pyramidal-inhibitory-network-gamma (PING) activity. To this end, we designed a paradigm that embraces the definition of resonance and entrainment as stated in dynamical systems theory. While neuroscientific studies widely rely on this terminology \citep[e.g.][]{hutcheon2000resonance,schwab2006alpha,notbohm2016modification,lakatos2019new}, the prerequisites of entrainment are often not sufficiently accounted for, as pointed out by \citet{helfrich2019neural}. Entrainment requires the presence of a self-sustained oscillator that synchronises to an external drive \citep{pikovsky2003synchronization,thut2011entrainment}. This synchronisation is reflected by a convergence of the frequency and phase of the endogenous oscillator to the driving force \citep{pikovsky2003synchronization}. 
 Similarly, resonance is reflected by periodic responses to a rhythmic drive and an amplification of individually preferred rhythms, but does not require the presence of self-sustained oscillations per se \citep{pikovsky2003synchronization,helfrich2019neural}. 
 Indeed, studies on photic stimulation at a broad range of frequencies \citep{herrmann2001human,gulbinaite2019attention} including the alpha-band  \citep{notbohm2016modification} have provided evidence for both resonance and entrainment in the visual system \citep[also see][for resonance phenomena in cat visual cortex]{rager1998response}.
 
-In this study, oscillatory MEG responses to photic stimulation from 52 to 90 Hz were investigated in the presence and absence of visually induced gamma oscillations. In the \RFTonly condition, a  rhythmic flicker was applied to a circular, invisible patch. In the \gammaRFT condition, the flicker was superimposed on moving grating stimuli that have been shown to reliably induce strong, narrow-band gamma oscillations \citep{hoogenboom2006localizing,hoogenboom2010visually,van2013visual}. These oscillations reflect individual neuronal dynamics \citep{hoogenboom2006localizing,van2013visual} and have been shown to propagate to downstream areas in the visual hierarchy \citep{buffalo2011laminar,bosman2012attentional,bastos2015visual,michalareas2016alpha}. Therefore, we will use the terms \textit{induced} and \textit{endogenous} gamma oscillations interchangeably in the following. We chose moving-grating stimuli to elicit narrow-band endogenous gamma oscillations since more complex stimuli induce a broad-band gamma response which might not reflect oscillations \citep{hermes2015gamma,hermes2015stimulus}.
+In this study, oscillatory MEG responses to photic stimulation from 52 to 90 Hz were investigated in the presence and absence of visually induced gamma oscillations. In the \RFTonly condition, a  rhythmic flicker was applied to a circular, invisible patch. In the \gammaRFT condition, the flicker was superimposed on moving grating stimuli that have been shown to reliably induce strong, narrow-band gamma oscillations \citep{hoogenboom2006localizing,hoogenboom2010visually,van2013visual}. These oscillations reflect individual neuronal dynamics \citep{hoogenboom2006localizing,van2013visual} and have been shown to propagate to downstream areas in the visual hierarchy \citep{buffalo2011laminar,bosman2012attentional,bastos2015visual,michalareas2016alpha}. Therefore, we will use the terms \textit{induced} and \textit{endogenous} gamma oscillations interchangeably in the following. We chose moving grating stimuli to elicit narrow-band endogenous gamma oscillations since more complex stimuli induce a broad-band gamma response which might not reflect oscillations \citep{hermes2015gamma,hermes2015stimulus}.
 
 We expected the  visual system to resonate to frequencies close the endogenous gamma rhythm elicited by the gratings, as well as a synchronisation of the gamma oscillations and the rhythmic flicker. As we will demonstrate, the moving gratings did generate strong endogenous gamma oscillations, and the photic drive did produce robust responses at frequencies up to 80 Hz. However, to our great surprise, there was no evidence that the rhythmic stimulation entrains endogenous gamma oscillations.
 \end{document}
