--- a/sections/3_methods.tex
+++ b/sections/3_methods.tex
@@ -6,7 +6,7 @@
 
 
 \subsubsection{Experimental Procedure \& Apparatus}
-\noindent The MEG data were recorded using a MEGIN Triux system housed in a magnetically shielded room (MSR; Vacuumschmelze GmbH \& co., Hanau, Germany). Neuromagnetic signals were acquired from  204 orthogonal planar gradiometers and 102 magnetometers at 102 sensor positions.  Horizontal and vertical EOG, the cardiac ECG signals, stimulus markers as well as luminance changes recorded by a photodiode (see below) were acquired together with the  neuromagnetic signal. The data were lowpass filtered online at 330 Hz and sampled at 1000 Hz. Structural magnetic resonance images (MRIs), for later co-registration with the MEG data, were acquired using a 3 Tesla Siemens MAGNETOM Prisma whole-body scanner (Siemens AG, Muenchen, Germany), TE = 2 ms, and TR = 2 s). For two subjects, the T1-weighted images obtained in previous experiments, using a 3 Tesla Philips Achieva Scanner (Philips North America Corporation, Andover, USA), were used (scanned at the former Birmingham University Imaging Centre).  Participants were invited to two separate sessions during which the MEG data and  the anatomical images were acquired, respectively. Whenever possible, the MEG recording preceded the MRI scan; otherwise, the MEG session was scheduled at least 48 hours after the MRI session to avoid any residual magnetisation from the MRI system. Volunteers were requested to remove all metal items (e.g. jewellery) before entering the MSR. To enable later co-registration between MRI and MEG data, four to five head-position-indicator (HPI) coils were attached to the participants' foreheads. Along with the position of the coils, three fiducial landmarks (nasion, left and right tragus) and over 200 head-shape samples were digitized using a Polhemus Fastrak (Polhemus, Colchester, USA). Following the preparation, the participants were seated in upright position under the dewar, with orientation set to 60$^{\circ}$. The MEG experiment consisted of fifteen blocks lasting 4 min 30 s each. Participants were offered breaks every $\sim$20 min but remained seated. At the beginning of each of these recording blocks, subjects were instructed to sit with the top and backside of their head touching the sensor helmet. 
+\noindent The MEG data were recorded using a MEGIN Triux system housed in a magnetically shielded room (MSR; Vacuumschmelze GmbH \& co., Hanau, Germany). Neuromagnetic signals were acquired from  204 orthogonal planar gradiometers and 102 magnetometers at 102 sensor positions.  Horizontal and vertical EOG, the cardiac ECG signals, stimulus markers as well as luminance changes recorded by a photodiode were acquired together with the  neuromagnetic signal. The data were lowpass filtered online at 330 Hz and sampled at 1000 Hz. Structural magnetic resonance images (MRIs), for later co-registration with the MEG data, were acquired using a 3 Tesla Siemens MAGNETOM Prisma whole-body scanner (Siemens AG, Muenchen, Germany), TE = 2 ms, and TR = 2 s). For two subjects, the T1-weighted images obtained in previous experiments, using a 3 Tesla Philips Achieva Scanner (Philips North America Corporation, Andover, USA), were used (scanned at the former Birmingham University Imaging Centre).  Participants were invited to two separate sessions during which the MEG data and  the anatomical images were acquired, respectively. Whenever possible, the MEG recording preceded the MRI scan; otherwise, the MEG session was scheduled at least 48 hours after the MRI session to avoid any residual magnetisation from the MRI system. Volunteers were requested to remove all metal items (e.g. jewellery) before entering the MSR. To enable later co-registration between MRI and MEG data, four to five head-position-indicator (HPI) coils were attached to the participants' foreheads. Along with the position of the coils, three fiducial landmarks (nasion, left and right tragus) and over 200 head-shape samples were digitized using a Polhemus Fastrak (Polhemus, Colchester, USA). Following the preparation, the participants were seated in upright position under the dewar, with orientation set to 60$^{\circ}$. The MEG experiment consisted of fifteen blocks lasting 4 min 30 s each. Participants were offered breaks every $\sim$20 min but remained seated. At the beginning of each of these recording blocks, subjects were instructed to sit with the top and backside of their head touching the sensor helmet. 
 The positions of the HPI coils relative to the sensors was gathered at the beginning of each recording block, but not continuously. The MEG experiment lasted $\sim$75 min in total.
 
 \subsubsection{Rapid photic stimulation} \noindent
@@ -14,7 +14,7 @@ Stimuli were presented using a Propixx lite projector (VPixx Technologies Inc, S
 
 \subsubsection{Experimental Paradigm} \noindent
 Stimuli were created in MATLAB 2017a (The MathWorks, Inc. Natick, MA, USA) and presented using the Psychophysics Toolbox Version 3 \citep{brainard1997psychophysics}.
-\paragraph{Conditions} The experiment consisted of two conditions that will be referred to as the \RFTonly and the \gammaRFT condition, respectively. Each trial began with a one-second interval, in which a central white fixation cross was presented on a dark grey background. In the \RFTonly trials, a circular patch of size 2.43$^{\circ}$ was presented for 2 s. Its luminance was modulated sinusoidally at frequencies between 52 and 90 Hz (Figure \ref{fig:paradigm}A). Frequencies were randomised and balanced across trials. The patch was centred on the fixation cross, such that it was presented both foveally and parafoveally. To minimise the visibility of the flicker, the mean luminance of the patch was matched to the background (33\% luminance, RGB [84 84 84]). Each trial ended with a two-second interval in which only the fixation cross was presented. In the \gammaRFT condition, the baseline interval was followed by a 2 s presentation of a moving grating stimulus that has been shown to reliably elicit gamma oscillations in visual cortex \citep[e.g.][]{hoogenboom2006localizing,hoogenboom2010visually,muthukumaraswamy2013visual,tan2016meg}. The stimulus was the same size as the patch (2.43$^{\circ}$) and had a spatial frequency of 10.3 cycles/$^{\circ}$ (see Figure \ref{fig:paradigm}B). \textcolor{red}{The rings contracted towards the centre of the screen with a velocity of 0.56 $^{\circ}$/s, i.e. 4 cycles/s.} In the subsequent 2 s interval, the stimulus was flickered at the respective frequencies, followed by another 2 s interval in which the concentric moving circles remained on screen without photic stimulation. To keep the overall brightness of the stimulation similar between conditions, the luminance of the circular patch in the \RFTonly condition ranged from 0 to 66\% (of the projector's maximum), while the brightness of the gratings in the \gammaRFT ranged from 33 and 99\%. \textcolor{red}{The resulting contrast between the grey and black rings, of 66\%, has been previously demonstrated to induce clearly identifiable gamma oscillations \citep{self2016effects}. The range of the photic drive, i.e. the difference between peak and trough, estimated based on the projector's maximum luminance, was 339 lumens.} The flicker was applied to a small circular patch in the lower right corner of the screen, to acquire the stimulation signal with a photodiode. \textcolor{red}{Including both the \RFTonly and \gammaRFT condition enabled us to investigate any differences in the resonance properties of the visual system when set into gamma mode compared to mere stimulation with an almost invisible flicker. Given the filter properties of the visual system \citep[see][for review]{cormack2005computational}, we were further interested in identifying an upper limit of the frequencies inducing reliable responses. As we expect these results to guide future studies employing the rapid flicker for frequency tagging, we chose an invisible patch to avoid any confounds by response enhancement, e.g. by object-based attention or figure-ground segregation \citep{self2016effects}.} 
+\paragraph{Conditions} The experiment consisted of two conditions that will be referred to as the \RFTonly and the \gammaRFT condition, respectively. Each trial began with a one-second interval, in which a central white fixation cross was presented on a dark grey background. \textcolor{red}{In the \RFTonly trials, a photic drive in the shape of a circular patch of size 2.62$^{\circ}$ was presented for 2 s. Therefor, the patch's luminance was modulated sinusoidally at frequencies between 52 and 90 Hz (Figure \ref{fig:paradigm}A). To minimise the visibility of the flicker, the mean luminance of the patch was matched to the background (33\% luminance, RGB [84 84 84]).} Frequencies were randomised and balanced across trials. The patch was centred on the fixation cross, such that it was presented both foveally and parafoveally.  Each trial ended with a two-second interval in which only the fixation cross was presented. In the \gammaRFT condition, the baseline interval was followed by a 2 s presentation of a moving grating stimulus that has been shown to reliably elicit gamma oscillations in visual cortex \citep[e.g.][]{hoogenboom2006localizing,hoogenboom2010visually,muthukumaraswamy2013visual,tan2016meg}. The stimulus was the same size as the patch (2.62$^{\circ}$) and had a spatial frequency of 9.1 rings/$^{\circ}$ (see Figure \ref{fig:paradigm}B). \textcolor{red}{The rings contracted towards the centre of the screen with a velocity of 0.56 $^{\circ}$/s, i.e. $\sim$4.5 cycles/s.} In the subsequent 2 s interval, the stimulus was flickered at the respective frequencies, followed by another 2 s interval in which the concentric moving circles remained on screen without photic stimulation. To keep the overall brightness of the stimulation similar between conditions, the luminance of the circular patch in the \RFTonly condition ranged from 0 to 66\% (of the projector's maximum), while the brightness of the gratings in the \gammaRFT ranged from 33 to 99\%. \textcolor{red}{The resulting contrast between the grey and black rings, of 66\%, has been previously demonstrated to induce clearly identifiable gamma oscillations \citep{self2016effects}. The range of the photic drive, i.e. the difference between peak and trough, estimated based on the projector's maximum luminance, was 339 lumens.} The flicker was applied to a small circular patch in the lower right corner of the screen, to acquire the stimulation signal with a photodiode. \textcolor{red}{Including both the \RFTonly and \gammaRFT condition enabled us to investigate any differences in the resonance properties of the visual system when set into gamma mode, compared to mere stimulation with an almost invisible flicker. Given the filter properties of the visual system \citep[see][for review]{cormack2005computational}, we were further interested in identifying an upper limit of the frequencies inducing reliable responses. As we expect these results to guide future studies employing the rapid flicker for frequency tagging, we chose an invisible patch to avoid any confounds by response enhancement, e.g. by object-based attention or figure-ground segregation \citep{self2016effects}.} 
 
  \paragraph{Task \& Time Course}
 Participants were kept vigilant by performing a simple visual detection task that required them to respond to a 45$^{\circ}$ rotation of the fixation cross at the centre of the screen, which occurred once every minute \citep[e.g.][]{zaehle2010transcranial}. Data including the target and/or the responses were discarded and not considered in the analysis. The rotation took place after a trial in the majority, i.e. 60\%, of the cases. The remaining 40\% of rotations took place at any point during a trial. The experiment was divided into 15 blocks of 4.5 min, resulting in a recording time of 75 min in total. \textcolor{red}{The 40 frequency$\times$condition combinations were presented once in each block, in randomised order, resulting in a total of 15 trials per flicker frequency and condition.} To minimise the amount of trials rejected by eye-blink artefacts, 3 s breaks, indicated by a motivating catchphrase or happy face on the screen, were incorporated every five trials, i.e. every 25 - 35 seconds. Participants were instructed to utilise these breaks to rest their eyes.
@@ -23,7 +23,7 @@ Participants were kept vigilant by performing a simple visual detection task tha
     \includegraphics[width=85mm]{figures/fig1_paradigm.eps}
           \captionsetup{width=85mm}
 
-    \caption[Experimental paradigm]{The experimental paradigm. \textbf{A} Trials in the \RFTonly condition. A 1 s baseline interval with a central fixation cross was followed by a 2 s interval of the rapid flicker applied to circular patch of size 2.43$^{\circ}$. The average luminance in the flickering patch was equal to the surrounding grey colour, making the flickering patch almost unperceivable. The trials ended with 2 s of the fixation cross only. \textbf{B} The trials in the \gammaRFT condition. The 1 s baseline interval was followed by 2 s of grating stimuli presented centrally on the screen, contracting inwards. Subsequently, the flicker was imposed onto the stimuli for 2 s. The trial ended with a 2 s presentation of the moving gratings without photic stimulation. \textbf{C} Sinusoidal luminance change in one pixel induced by the photic drive at 52 Hz in the \RFTonly condition. \textbf{D} Luminance change in one pixel as a result of the flicker and the gratings moving concentrically with a velocity of 4 cycles/s. To maintain a similar mean luminance between conditions, photic modulation of the invisible patch in \textbf{A} ranged from 0 to 66\% (mean RGB [84 84 84]), while the light grey rings of the grating, that is 50\% of the stimulus' surface, were flickered between 33 and 99\% (mean RGB [168 168 168] per ring).}
+    \caption[Experimental paradigm]{The experimental paradigm. \textbf{A} Trials in the \RFTonly condition. A 1 s baseline interval with a central fixation cross was followed by a 2 s interval of the rapid flicker applied to a circular patch of size 2.62$^{\circ}$. The average luminance in the flickering patch was equal to the surrounding grey colour, making the photic drive almost unperceivable. The trials ended with 2 s of the fixation cross only. \textbf{B} The trials in the \gammaRFT condition. The 1 s baseline interval was followed by 2 s of grating stimuli presented centrally on the screen, contracting inwards. Subsequently, the flicker was imposed onto the stimuli for 2 s. The trial ended with a 2 s presentation of the moving gratings without photic stimulation. \textbf{C} Sinusoidal luminance change in one pixel induced by the photic drive at 52 Hz in the \RFTonly condition. \textbf{D} Luminance change in one pixel as a result of the flicker and the gratings moving concentrically with a velocity of 4 cycles/s. To maintain a similar mean luminance between conditions, photic modulation of the invisible patch in \textbf{A} ranged from 0 to 66\% (mean RGB [84 84 84]), while the light grey rings of the grating, that is 50\% of the stimulus' surface, were flickered between 33 and 99\% (mean RGB [168 168 168] per ring).}
     \label{fig:paradigm}
 \end{figure}
 
@@ -68,7 +68,7 @@ with $\nabla\theta_{i}$ being the gradient, i.e. slope, of the phase angle betwe
 \subsubsection{Source Analysis} \noindent
 \paragraph{MRI preprocessing} The raw T1 weighted images were converted from DICOM to NIFTI. The coordinate system of the participants' individual MRI was aligned to the anatomical landmarks using the head-surface obtained from the MRI and the scalp shapes digitised prior to the recordings. Realignment was done automatically using the Iterative Closest Point (ICP) algorithm \citep{besl1992method} implemented in the FieldTrip toolbox and corrected manually as necessary. The digitised headshape of one participant, for whom there was no anatomical image available, was aligned to a standardised template brain.
  
-\paragraph{Linearly Constrained Minimum Variance Beamforming} The neuroanatomical origins of the visually induced gamma oscillations in the \gammaRFT condition and the response induced by the photic drive in the \RFTonly condition were estimated using Linearly Constrained Minimum Variance spatial filters \citep[LCMV;][]{van1997localization}, implemented in the Fieldtrip Toolbox \citep{oostenveld2011fieldtrip}. The MEG forward model was calculated using single-shell head-models, estimated based on the aligned anatomical images, and an equally spaced 4-mm grid, warped into MNI (Montreal Neurologic Institute) space  \citep[\citealt{nolte2003magnetic}, also see][]{oostenveld2011fieldtrip,stenroos2014comparison}; yielding 37,163 dipoles inside the brain. The pre-processed data, epoched in 7 and 5-second trials for the respective conditions, were band-pass filtered at 50 to 92 Hz, by applying second order Butterworth two-pass high- and low-pass filters. \textcolor{red}{Segments of 0.5 s of the baseline interval (0.75 - 0.25 s prior to stimulation) and stimulation interval (0.75 - 1.25 s after flicker/grating onset, 2.75 - 3.25 to identify the flicker response in \gammaRFT) were extracted from the filtered data}. For each participant, a common covariance matrix for the 204 planar gradiometers was computed based on the extracted time series and used to estimate the spatial filter coefficients for each dipole location, whereby only the direction with the highest dipole moment was considered. Data in the baseline and stimulation intervals were projected to source space by multiplying each filter coefficient with the sensor time series. Fast Fourier Transforms of the resulting time series, multiplied with a Hanning taper, were computed for each of the 37,163 virtual channels, separately for the baseline and stimulation intervals, and averaged over trials. Relative power change at the IGF and flicker frequencies was computed by applying equation \eqref{eq:rlc} to the Fourier-transformed baseline and stimulation intervals. The source-localised power change values at flicker frequencies up to 78 Hz were averaged to identify a common source for the oscillatory response to the photic drive.
+\paragraph{Linearly Constrained Minimum Variance Beamforming} The neuroanatomical origins of the visually induced gamma oscillations and the response induced by the photic drive condition were estimated using Linearly Constrained Minimum Variance spatial filters \citep[LCMV;][]{van1997localization}, implemented in the Fieldtrip Toolbox \citep{oostenveld2011fieldtrip}. The MEG forward model was calculated using single-shell head-models, estimated based on the aligned anatomical images, and an equally spaced 4-mm grid, warped into MNI (Montreal Neurologic Institute) space  \citep[\citealt{nolte2003magnetic}, also see][]{oostenveld2011fieldtrip,stenroos2014comparison}; yielding 37,163 dipoles inside the brain. The pre-processed data, epoched in 7 and 5-second trials for the respective conditions, were band-pass filtered at 50 to 92 Hz, by applying second order Butterworth two-pass high- and low-pass filters. \textcolor{red}{Segments of 0.5 s of the baseline interval (0.75 - 0.25 s prior to stimulation) and stimulation interval (0.75 - 1.25 s after flicker/grating onset, 2.75 - 3.25 to identify the flicker response in \gammaRFT) were extracted from the filtered data}. For each participant, a common covariance matrix for the 204 planar gradiometers was computed based on the extracted time series and used to estimate the spatial filter coefficients for each dipole location, whereby only the direction with the highest dipole moment was considered. Data in the baseline and stimulation intervals were projected to source space by multiplying each filter coefficient with the sensor time series. Fast Fourier Transforms of the resulting time series, multiplied with a Hanning taper, were computed for each of the 37,163 virtual channels, separately for the baseline and stimulation intervals, and averaged over trials. Relative power change at the IGF and flicker frequencies was computed by applying equation \eqref{eq:rlc} to the Fourier-transformed baseline and stimulation intervals. The source-localised power change values at flicker frequencies up to 78 Hz were averaged to identify a common source for the oscillatory response to the photic drive.
 
 
 
