--- a/sections/4_results.tex
+++ b/sections/4_results.tex
@@ -20,7 +20,7 @@ Figure \ref{fig:IGF_example}C depicts the averaged TFRs of power as well as the 
 
 \subsection{Photic drive induces responses up to $\sim$80 Hz} \noindent
 We next set out to quantify the rhythmic response to the flicker as a function of frequency in the \RFTonly condition, in which stimulation was applied to an invisible patch. Figure \ref{fig:RFT_example} A and B, left panel, depicts the overlaid power spectra for the different stimulation frequencies in two representative participants (the same as in Figure \ref{fig:IGF_example}). The spectra were estimated by averaging the TFRs of power in the 0.25 - 1.75s interval after flicker onset. Due to the overlap of the sensors detecting the gamma oscillations and photic drive response (compare Figure \ref{fig:IGF_example} and \ref{fig:RFT_example} right columns) the same SOI were used as in the \gammaRFT condition.
-Both individuals showed strong responses at the respective stimulation frequencies, with a maximum relative power change of 200\% and 500\% in subject A and B, respectively. \textcolor{red}{The identified IGFs (indicated by vertical dashed lines) were higher than the frequencies inducing the strongest flicker response in 20 out of 22 participants (exact Binomial Test against H_0: p=0.5: $p = 0.00012, probabiliy of successes (IGF>flicker freq) 0.91, Bayes Factor BF_{10}=309.3$).} When averaged over all participants, the magnitude of the flicker response decreased systematically with frequency (Figure \ref{fig:RFT_example}\textbf{C}).
+Both individuals showed strong responses at the respective stimulation frequencies, with a maximum relative power change of 200\% and 500\% in subject A and B, respectively. \textcolor{red}{The identified IGFs (indicated by vertical dashed lines) were higher than the frequencies inducing the strongest flicker response in 20 out of 22 participants (exact Binomial Test against H_{0}: p=0.5 $p = 0.00012, probabiliy of successes (IGF>flicker freq) 0.91, Bayes Factor BF_{10}=309.3$).} When averaged over all participants, the magnitude of the flicker response decreased systematically with frequency (Figure \ref{fig:RFT_example}\textbf{C}).
 \begin{figure}[H]
    \centering
     \includegraphics[width=85mm]{figures/fig3_flicker.eps}
@@ -92,13 +92,12 @@ The group averaged, aligned TFRs are shown in Figure \ref{fig:TFRGA_ent} for fre
     \label{fig:TFRGA_ent}
 \end{figure}
 
-\textcolor{red}{In addition to the narrow-band gamma oscillations, the gratings elicited a rhythmic response at 4 Hz, i.e. the velocity of the concentric drift (not shown). Apart from that, we did not find any evidence for an intermodulation between the frequency of the movement and the photic drive, supporting the notion that both responses do not modulate one another.
+\textcolor{red}{In addition to the narrow-band gamma oscillations, the gratings elicited a rhythmic response at 4 Hz, i.e. the velocity of the concentric drift (not shown). Apart from that, we did not find any evidence for an intermodulation between the frequency of the movement and the photic drive, supporting the notion that both responses do not modulate one another.}
 
-\subsection{Frequency analyses with a longer time window confirm robustness of the reported results}
-To assess the robustness of our results, we repeated the frequency analyses in the \RFTonly and \gammaRFT condition with a 2s sliding time window. The longer window substantially increased the signal-to-noise ratio of the flicker response, to up to over 400\% relative power change in the \RFTonly condition and more than 600\% in the \gammaRFT condition (not shown). Besides that, the analyses replicated our reported main finding: a reduction in response magnitude (power) with increasing frequency, in both conditions, following the same trend as depicted in Figure \ref{fig:freq_fun}C and D. The 2 s sliding time-window did however not optimally capture the gamma power, which has a broader peak than the response to the photic drive. The 500 ms sliding window used in our reported analyses allowed both a reliable identification of a gamma peak frequency and a sufficiently high signal-to-noise ratio and frequency resolution of the flicker response (see Figure \ref{fig:subj_ent}A).}
+\subsection{\textcolor{red}{Frequency analyses with a longer time window confirm robustness of the reported results}} \textcolor{red}{To assess the robustness of our results, we repeated the frequency analyses in the \RFTonly and \gammaRFT condition with a 2s sliding time window. The longer window substantially increased the signal-to-noise ratio of the flicker response, to up to over 400\% relative power change in the \RFTonly condition and more than 600\% in the \gammaRFT condition (not shown). Besides that, the analyses replicated our reported main finding: a reduction in response magnitude (power) with increasing frequency, in both conditions, following the same trend as depicted in Figure \ref{fig:freq_fun}C and D. The 2 s sliding time-window did however not optimally capture the gamma power, which has a broader peak than the response to the photic drive. The 500 ms sliding window used in our reported analyses allowed both a reliable identification of a gamma peak frequency and a sufficiently high signal-to-noise ratio and frequency resolution of the flicker response (see Figure \ref{fig:subj_ent}A).}
 
 \subsection{\textcolor{red}{Oscillatory gamma dynamics cannot be captured by frequency entrainment}} \noindent
-Synchronisation of neuronal oscillations by rhythmic stimulation could be conceptualised as the entrainment of a self-sustained oscillator by an external force \citep[e.g.][]{notbohm2016modification,helfrich2019neural}. A central assumption of this phenomenon is the existence of a 'synchronisation region' in the frequency range around the endogenous frequency of the oscillator, the so-called Arnold tongue \citep[e.g.][]{pikovsky2003synchronization}. Driving frequencies falling inside this synchronisation region, will be able to modulate the dynamics of the self-sustained oscillator \citep[also see][]{hutt2018effect}. With this in mind, we investigated the power of the gamma oscillations before and during the photic drive for frequencies in the vicinity of the IGF (Figure \ref{fig:boxpl_ent}) in the \gammaRFT condition. For each participant, we considered the relative power change induced by the moving gratings in the 0.5 - 1.5 s interval (T1) before the flicker onset and in the 2.5 - 3.5 s interval (T2) in which both the moving gratings and the photic drive were present. We investigated this for stimulation frequencies below the IGF (averaged power for -6 and -4 Hz) and above (averaged power for +4 and +6 Hz). Assuming a symmetric Arnold tongue centred at the IGF, as shown for entrainment in the alpha-band \citep{notbohm2016modification}, we expected a reduction in power at the IGF in interval T2 for both higher and lower driving frequencies, i.e. an effect of time, but not frequency. Figure \ref{fig:boxpl_ent} depicts power change at the IGF for the factors stimulation frequency (drive$<$IGF and drive$>$IGF) and time interval (T1 and T2), averaged over the SOIs for each subject. In accordance with the TFRs in Figure \ref{fig:TFRGA_ent}, there is no meaningful indication for gamma power being reduced during the T2 interval as compared to the T1 interval, affirming the coexistence of the two responses. \textcolor{red}{A factorial repeated-measures ANOVA did not reveal any significant main effects of the factors time (T1 vs T2) and frequency (drive$<$IGF vs drive$>$IGF), but a significant interaction effect ($F(1,21)=5.09, p=0.003\text{**}, \eta^2=.003$). These results were further investigated using a Bayesian repeated-measure ANOVA as implemented in R (package 'BayesFactor'). The obtained Bayes factors ($BF_{10}$) indicate that the variance in the data is better explained by the variability between participants, than the factor \textit{time} ($BF_{10} = 0.233$), or both \textit{time} and \textit{frequency} ($BF_{10} = 0.274$). Evidence for the interaction effect \textit{time:frequency} was found to be inconclusive ($BF_{10} = 0.53$), as was the main effect of frequency alone $BF_{10} = 1.146$). These results provide evidence against the expected reduction in gamma power during rhythmic photic stimulation, suggesting that the flicker did not capture the oscillatory gamma dynamics.}
+Synchronisation of neuronal oscillations by rhythmic stimulation could be conceptualised as the entrainment of a self-sustained oscillator by an external force \citep[e.g.][]{notbohm2016modification,helfrich2019neural}. A central assumption of this phenomenon is the existence of a 'synchronisation region' in the frequency range around the endogenous frequency of the oscillator, the so-called Arnold tongue \citep[e.g.][]{pikovsky2003synchronization}. Driving frequencies falling inside this synchronisation region, will be able to modulate the dynamics of the self-sustained oscillator \citep[also see][]{hutt2018effect}. With this in mind, we investigated the power of the gamma oscillations before and during the photic drive for frequencies in the vicinity of the IGF (Figure \ref{fig:boxpl_ent}) in the \gammaRFT condition. For each participant, we considered the relative power change induced by the moving gratings in the 0.5 - 1.5 s interval (T1) before the flicker onset and in the 2.5 - 3.5 s interval (T2) in which both the moving gratings and the photic drive were present. We investigated this for stimulation frequencies below the IGF (averaged power for -6 and -4 Hz) and above (averaged power for +4 and +6 Hz). Assuming a symmetric Arnold tongue centred at the IGF, as shown for entrainment in the alpha-band \citep{notbohm2016modification}, we expected a reduction in power at the IGF in interval T2 for both higher and lower driving frequencies, i.e. an effect of time, but not frequency. Figure \ref{fig:boxpl_ent} depicts power change at the IGF for the factors stimulation frequency (drive$<$IGF and drive$>$IGF) and time interval (T1 and T2), averaged over the SOIs for each subject. In accordance with the TFRs in Figure \ref{fig:TFRGA_ent}, there is no meaningful indication for gamma power being reduced during the T2 interval as compared to the T1 interval, affirming the coexistence of the two responses. \textcolor{red}{A factorial repeated-measures ANOVA did not reveal any significant main effects of the factors time (T1 vs T2) and frequency (drive$<$IGF vs drive$>$IGF), but a significant interaction effect ($F(1,21)=5.09, p=0.003\text{**}, \eta^2=.003$). These results were further investigated using a Bayesian repeated-measure ANOVA as implemented in R (package 'BayesFactor'). The obtained Bayes factors ($BF_{10}$) indicate that the variance in the data underlies the variability between participants, while the factor \textit{time} ($BF_{10} = 0.233$) and both \textit{time} and \textit{frequency} ($BF_{10} = 0.274$) do not add any explanatory value. Evidence for the interaction effect \textit{time:frequency} was found to be inconclusive ($BF_{10} = 0.53$), as was the main effect of frequency alone $BF_{10} = 1.146$). These results provide evidence against the expected reduction in gamma power during rhythmic photic stimulation, suggesting that the flicker did not capture the oscillatory gamma dynamics.}
 
 \begin{figure}[H]
     \centering
@@ -109,7 +108,7 @@ Synchronisation of neuronal oscillations by rhythmic stimulation could be concep
 \end{figure}
 
 \subsection{Photic drive does not reliably modulate gamma phase} \noindent
-Synchronisation of a self-sustained oscillator by an external force, i.e. entrainment, is reflected by a constant phase angle between the two oscillators over extended intervals, so-called \textit{phase plateaus}. These might occur when the frequency of the driver is close to the endogenous frequency of the oscillator, i.e. within its Arnold Tongue \citep{rosenblum2000detection,pikovsky2003synchronization,notbohm2016modification}. When approaching the edge of the synchronisation region, episodes of constant phase angles are interrupted by so-called \textit{phase slips} that emerge when the self-sustained oscillator briefly unlocks from the driving force and oscillates at its own frequency. These phase slips will be observed as steps between the phase plateaus. \textcolor{red}{The phase plateau analysis was implemented to complement the PLV analysis shown in Figure \ref{fig:freq_fun}. The PLV quantifies the average synchrony between photodiode and neuromagnetic signal over trials using a 500 ms sliding time window and is not feasible to identify intermittent plateaus. We hypothesised that in the case of oscillatory entrainment, the gamma oscillator in the \gammaRFT condition would alternate between locking on to photic drive for a few cycles and slipping back to its endogenous rhythm. Due to the short duration of the gamma cycle ($\sim$17.2 ms for a 58 Hz IGF), this intermittency would be smeared out by the sliding window. As there was no endogenous gamma oscillator in the flicker condition, such an intermittency was not expected.} To investigate phase entrainment of the gamma oscillations by the photic drive, we inspected the phase angle between the photodiode and one, individually selected, occipital gradiometer of interest per participant. The time series of the phase were estimated per trial, separately for the two sensors, using a sliding time-window Fourier transform approach ($\Delta$T = 3 cycles = 3/$f_{flicker}$s; Hanning taper). Phase differences per trial were obtained by subtracting the unwrapped phase angle time series.
+Synchronisation of a self-sustained oscillator by an external force, i.e. entrainment, is reflected by a constant phase angle between the two oscillators over extended intervals, so-called \textit{phase plateaus}. These might occur when the frequency of the driver is close to the endogenous frequency of the oscillator, i.e. within its Arnold Tongue \citep{rosenblum2000detection,pikovsky2003synchronization,notbohm2016modification}. When approaching the edge of the synchronisation region, episodes of constant phase angles are interrupted by so-called \textit{phase slips} that emerge when the self-sustained oscillator briefly unlocks from the driving force and oscillates at its own frequency. These phase slips will be observed as steps between the phase plateaus. \textcolor{red}{The phase plateau analysis was implemented to complement the PLV analysis shown in Figure \ref{fig:freq_fun}. The PLV quantifies the average synchrony between photodiode and neuromagnetic signal over trials using a 500 ms sliding time window. We hypothesised that in the case of oscillatory entrainment, the gamma oscillator in the \gammaRFT condition would alternate between locking on to the photic drive for a few cycles and slipping back to its endogenous rhythm. Due to the short duration of the gamma cycle ($\sim$17.2 ms for a 58 Hz IGF), this intermittency would be smeared out by the sliding window. As there was no endogenous gamma oscillator in the flicker condition, such an intermittency was not expected.} To investigate phase entrainment of the gamma oscillations by the photic drive, we inspected the phase angle between the photodiode and one, individually selected, occipital gradiometer of interest per participant. The time series of the phase were estimated per trial, separately for the two sensors, using a sliding time-window Fourier transform approach ($\Delta$T = 3 cycles = 3/$f_{flicker}$s; Hanning taper). Phase differences per trial were obtained by subtracting the unwrapped phase angle time series.
 
 \paragraph{Phase angle between photodiode and MEG signal over time} 
 Figure \ref{fig:plat_singlesubj} illustrates the unwrapped phase angles between the MEG and photodiode signal during the photic drive at the IGF (here 58 Hz), in the \RFTonly (A) and \gammaRFT condition (B), respectively, for the same representative participant shown in Figure \ref{fig:IGF_example}A, \ref{fig:RFT_example}A and \ref{fig:subj_ent}. The coloured line graphs depict individual trials. In both conditions, the MEG signal drifts apart from the photic drive, towards a maximum difference of 60 radians, i.e. a phase difference of about 9.5 cycles, by the end of the trial (A and B, top panel). Interestingly, the direction of the phase angle appears to change during some of the trials, suggesting spectral instability of the gamma oscillations. Furthermore, the graphs demonstrate a substantial inter-trial variability. This diffusion between trials, quantified for each participant as the standard deviation over trials at the end of the photic stimulation (t=2 in \RFTonly and t=4 in \gammaRFT condition), converted from radiant to ms, is juxtapositioned in Figure \ref{fig:plat_singlesubj}C for the two conditions. It can be readily seen that the phase angles between the stimulation and MEG signal fan out highly similarly in absence and presence of the endogenous gamma oscillations.
@@ -128,14 +127,14 @@ Visual inspection of the first 0.25 s of the phase angle times series, depicted 
 
 \textcolor{red}{
 \subsection{The sources of the gamma oscillations and the flicker responses peak at different locations} \noindent
-The coexistence of the endogenous gamma oscillations and flicker response suggest that these two signals are generated by different neuronal populations; possibly in different regions. To test this assumption we localised the respective sources using Linearly Constrained Minimum Variance spatial filters \citep[LCMV;][]{van1997localization}. The covariance matrix for the spatial filters was estimated based on the -0.75 to -0.25 s baseline in both conditions, the 0.75 to 1.25 s interval containing the moving gratings in \gammaRFT and the invisible flicker in the \RFTonly condition, as well as the 2.75 to 3.25 interval in the \gammaRFT condition in which the flicker was applied to the grating stimulus. Note that for each participant, one common filter was used for source estimation in both conditions. Power values at the IGF and flicker frequencies, averaged up to 78 Hz, respectively for the \gammaRFT and \RFTonly condition, were extracted. To extract power at the IGF and flicker frequencies, power change was computed relative to the baseline interval at each of the 37,163 dipole locations using equation \ref{eq:rlc}. To extract the flicker response on the \gammaRFT condition, the flicker\&gratings interval was contrasted to the presentation of the moving gratings alone. 
-Figure \ref{fig:sourceGA} illustrates the grand-average of the source localisation for the gamma oscillations (A), the invisible flicker response (B) and the response to the flickering gratings (C). Consistent with previous work, the responses originate from mid-occipital regions \citep{hoogenboom2006localizing,zhigalov2019probing}. It is worth noting that the sources of the gamma oscillations and response to the invisible flicker are relatively focal, while the activity induced by the flickering gratings extends more broadly over visual cortex. Using the MNI to Talaraich mapping online tool by Biomag Suite Web (MNI2TAL Tool) \citep[see][]{lacadie2008brodmann,lacadie2008more}, the peak of the gamma oscillations was located in the vental part of the secondary visual cortex (V2, Brodmann area 18; MNI coordinates = [-6mm -100mm -8mm], grandaverage). The peak sources of the flicker responses in both conditions were found to hover in the Calcarine Fissure, at a 2mm distance to the border of the primary and secondary visual cortex (in dorsal direction), suggesting that they are generated by neighbouring, coherent sources in both hemispheres \citep{belardinelli2012source} (MNI coordinates: flicker [6mm -96mm 12mm]; flicker\&gratings [6mm -100mm 0mm]). 
-To compare the peak locations between the sources in a lower dimensional space, the identified 3D coordinates were projected along their first Principal Component \citep{herrmann2011syntactic}. Dependent sample t-tests revealed a significant difference between the peak sources of the IGF and the flicker responses in the \RFTonly condition $t(21) = -3.091, p = 0.017\text{**,} B_{10} = 8.2$, als well as to the peak of the response to the flickering gratings relative to gratings alone, $t(21) = -2.633, p = 0.023\text{**,} B_{10} = 3.45$; with the Bayes Factors B\textsubscript{10} revealing moderate evidence for the H\textsubscript{1}. There was no significant difference between the sources of the flicker responses in both conditons, $t(21) = 0.732, p = 0.472, B_{10} = 0.28$. According to the Bayes Factor, however, evidence for the H\textsubscript{0} is inconclusive and should be interpreted tentatively. Note that all t-values were Benjamini-Hochberg-corrected for multiple comparisons. In light of the coexistence of the two responses observed in Figure \ref{fig:subj_ent} and \ref{fig:TFRGA_ent}, these results support the notion that gamma oscillations and flicker responses are generated by different neuronal populations.
+The coexistence of the endogenous gamma oscillations and flicker response suggest that these two signals are generated by different neuronal populations; possibly in different regions. To test this assumption we localised the respective sources using Linearly Constrained Minimum Variance spatial filters \citep[LCMV;][]{van1997localization}. The covariance matrix for the spatial filters was estimated based on the -0.75 to -0.25 s baseline in both conditions, the 0.75 to 1.25 s interval containing the moving gratings in \gammaRFT and the invisible flicker in the \RFTonly condition, as well as the 2.75 to 3.25 interval in the \gammaRFT condition in which the flicker was applied to the grating stimulus. Note that for each participant, one common filter was used for source estimation in both conditions. Power values at the IGF and flicker frequencies, averaged up to 78 Hz, respectively for the \gammaRFT and \RFTonly condition, were estimated based on the Fourier Transform. To extract power at the IGF and flicker frequencies, power change was computed relative to the baseline interval at each of the 37,163 dipole locations using equation \ref{eq:rlc}. To isolate the flicker response on the \gammaRFT condition, the flicker\&gratings interval was contrasted to the presentation of the moving gratings alone. 
+Figure \ref{fig:sourceGA} illustrates the grandaverage of the source localisation for the gamma oscillations (A), the invisible flicker response (B) and the response to the flickering gratings (C). Consistent with previous work, the responses originate from mid-occipital regions \citep{hoogenboom2006localizing,zhigalov2019probing}. It is worth noting that the sources of the gamma oscillations and response to the invisible flicker are relatively focal, while the activity induced by the flickering gratings extends more broadly over visual cortex. Using the MNI to Talaraich mapping online tool by Biomag Suite Web (MNI2TAL Tool) \citep[see][]{lacadie2008brodmann,lacadie2008more}, the peak of the gamma oscillations was located in the vental part of the secondary visual cortex (V2, Brodmann area 18; MNI coordinates = [-6mm -100mm -8mm], grandaverage). The peak sources of the flicker responses in both conditions were found to hover in the Calcarine Fissure, at a 2mm distance to the border of the primary and secondary visual cortex (in dorsal direction), suggesting that they are generated by neighbouring, coherent sources in both hemispheres \citep{belardinelli2012source} (MNI coordinates: flicker [6mm -96mm 12mm]; flicker\&gratings [6mm -100mm 0mm]). 
+To compare the peak locations between the sources in a lower dimensional space, the identified 3D coordinates were projected along their first Principal Component \citep{herrmann2011syntactic}. Dependent sample t-tests revealed a significant difference between the peak sources of the IGF and the invisible flicker responses $t(21) = -3.091, p = 0.017\text{**,} B_{10} = 8.2$, as well as to the flickering gratings relative to gratings, $t(21) = -2.633, p = 0.023\text{**,} B_{10} = 3.45$; with the Bayes Factors B\textsubscript{10} revealing moderate evidence for the H\textsubscript{1} \citep{quintana2018bayesian}. There was no significant difference between the sources of the flicker responses in both conditons, $t(21) = 0.732, p = 0.472, B_{10} = 0.28$, with the Bayes Factor providing moderate evidence for the H\textsubscript{0}. Note that all t-values were Benjamini-Hochberg-corrected for multiple comparisons. In light of the coexistence of the two responses observed in Figure \ref{fig:subj_ent} and \ref{fig:TFRGA_ent}, these results support the notion that gamma oscillations and flicker responses are generated by different neuronal populations.
 \begin{figure}[H]
     \centering
     \includegraphics[width=116mm]{figures/fig10_sources_sq.eps}  
     \captionsetup{width=116mm}
-    \caption[Source localisation of the gamma oscillations and flicker responsse]{Source estimates using the LCMV beamformer approach mapped on a standardised MNI brain. \textbf{A} Source estimation of the visually induced gamma oscillations (power change relative to baseline), with the peak of the source identified at MNI coordinates [-6mm -100mm -8mm]. \textbf{B} Source estimation of the flicker response (relative to baseline), with the average peak source at [6mm -96mm 12mm] (in Calcarine Fissure). \textbf{C} Source estimation of the flicker response in the \gammaRFT condition (relative to gratings interval),  with the average peak source at [6mm -100mm 0mm] (in Calcarine Fissure). \textbf{D} Coordinates of the identified peak sources for all participants (small scatters) and grandaverage (large scatters) for the IGF, and the flicker responses in the \RFTonly and \gammaRFT condition (green, orange and blue, respectively), indicating a distance between the peak sources of the flicker responses in both conditions and the gamma oscillations along the x and z axes.}
+    \caption[Source localisation of the gamma oscillations and flicker responsse]{Source estimates using the LCMV beamformer approach mapped on a standardised MNI brain. \textbf{A} Source estimation of the visually induced gamma oscillations (power change relative to baseline), with the peak of the source identified at MNI coordinates [-6mm -100mm -8mm]. \textbf{B} Source estimation of the flicker response (relative to baseline), with the average peak source at [6mm -96mm 12mm] (in Calcarine Fissure). \textbf{C} Source estimation of the flicker response in the \gammaRFT condition (relative to the gratings interval),  with the average peak source at [6mm -100mm 0mm] (in Calcarine Fissure). \textbf{D} Coordinates of the identified peak sources for all participants (small scatters) and grandaverage (large scatters) for the IGF, and the flicker responses in the \RFTonly and \gammaRFT condition (green, orange and blue, respectively). The peak sources of the flicker responses appear to adjacent, while the gamma sources tend to peak at inferior locations.}
     \label{fig:sourceGA}
 \end{figure}}
 \end{document}
